--- a/exemplo-portal-transparencia/portal_antigo/000-default.conf
+++ b/exemplo-portal-transparencia/portal_antigo/000-default.conf
@@ -8,7 +8,7 @@
         # However, you must set it for any further virtual host explicitly.
         #ServerName www.example.com
 
-        ServerAdmin webmaster@localhost
+        ServerAdmin stefano.martins@embras.net
         DocumentRoot /var/www/html/
 
         # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
@@ -34,6 +34,7 @@
         </IfModule>
 
         RewriteEngine on
+        Alias /siap-lib /var/www/html/egov/siap-lib/
         #
         # Estrutura antiga
         #
@@ -46,5 +47,9 @@
         RewriteRule ^/(.*)/geosiap/siapegov([a-zA-Z0-9_]+)?/(.*) %{DOCUMENT_ROOT}geosiap/siapegov$2/$3 [L,NC,QSA,E=WEBSIS_ALIAS:$1,E=WEBSIS_ROOT:geosiap/siapegov$2]
         RewriteRule ^/(.*)/geosiap/siapnet([a-zA-Z0-9_]+)?/(.*) %{DOCUMENT_ROOT}geosiap/siapnet$2/$3 [L,NC,QSA,E=WEBSIS_ALIAS:$1,E=WEBSIS_ROOT:geosiap/siapnet$2]
 
-        Alias /siap-lib /var/www/html/siap-lib/
+        <Directory "/var/www/html/">
+                Options -Indexes +FollowSymLinks +MultiViews
+                AllowOverride All
+                Require all granted
+        </Directory>
 </VirtualHost>
