--- a/exemplo-portal-transparencia/proxy/default.conf
+++ b/exemplo-portal-transparencia/proxy/default.conf
@@ -2,18 +2,9 @@ server {
     listen 80;
     server_name localhost;
 
-    location ~ /(websis|siap-lib) {
+    location ~ /(websis|siap-lib|geosiap) {
         proxy_pass http://portal_antigo;
-        proxy_http_version 1.1;
-
-        location ~ /\.ht {
-            deny all;
-        }
-    }
-
-    location ~ /(geosiap) {
-        proxy_pass http://portal_novo;
-        proxy_http_version 1.1;
+        include /etc/nginx/conf.d/proxy_params;
 
         location ~ /\.ht {
             deny all;
