Arquivos que eram adicionados no docker-compose.yml foram adicionados no build da imagem.

--- a/exemplo-portal-transparencia/portal_antigo/Dockerfile
+++ b/exemplo-portal-transparencia/portal_antigo/Dockerfile
@@ -1,10 +1,6 @@
 FROM php:7.0-apache
 LABEL maintainer="Stefano Martins <xstefanox AT gmail DOT com>"
 
-COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
-
-RUN a2enmod rewrite headers
-
 RUN apt-get update -qq && \
     apt-get install -y \
     libcurl4-gnutls-dev \
@@ -26,4 +22,13 @@ RUN docker-php-ext-install -j$(nproc) pdo_mysql
 RUN docker-php-ext-install -j$(nproc) xml 
 RUN docker-php-ext-install -j$(nproc) simplexml
 
+#  Altera configurações do PHP
+COPY uploads.ini /usr/local/etc/php/conf.d/uploads.ini
+COPY default_charset.ini /usr/local/etc/php/conf.d/default_charset.ini
+
+# Habilita módulos do Apache
+RUN a2enmod rewrite headers
+
+COPY charset.conf /etc/apache2/conf-available/charset.conf
+COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
 
